# ovirt-image-uploader

./: .gitignore  AUTHORS  Makefile  Makefile.am  configure.ac  ovirt-image-uploader.spec.in
automation/: build-artifacts-manual.sh  build-artifacts.packages  build-artifacts.sh  check-merged.packages  check-merged.sh  check-patch.packages  check-patch.sh
po/: POTFILES.in
src/: Makefile.am  __init__.py  __main__.py  engine-image-uploader.8  engine-image-uploader.py  imageuploader.conf  ovirt-image-uploader.8
src/logrotate.d/: Makefile.am
src/ovf/: Makefile.am  ovfenvelope.py  ovfenvelopetest.py
